--- a/teoria/0_introduction.ipynb
+++ b/teoria/0_introduction.ipynb
@@ -71,7 +71,7 @@
     "from IPython.display import HTML\n",
     "\n",
     "# Youtube\n",
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/L8RDdmkfEqQ?rel=0&amp;controls=0&amp;showinfo=0\" frameborder=\"0\" allowfullscreen></iframe>')\n"
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/L8RDdmkfEqQ?rel=0&amp;controls=0&amp;showinfo=0\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -88,7 +88,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -100,7 +102,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -150,5 +152,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
