--- a/teoria/4_control_flow.ipynb
+++ b/teoria/4_control_flow.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para la ejecución de bloques de codigo de manera condicional en python contamos con los elementos: if-elif-else, while, for"
+    "Para la ejecución de bloques de código de manera condicional en python contamos con los elementos: if-elif-else, while, for"
    ]
   },
   {
@@ -20,10 +20,10 @@
    "source": [
     "## if\n",
     "\n",
-    "La estructura __if__ permite ejecutar una sección de codigo sólo si la condición que le sigue es cierta.\n",
-    "Opcionalmente puede ir seguida de zero o más __elif__ que seran ejecutados si los condicionales anteriores fueren negativos. Finalmente disponemos del statement __else__ que será ejecutado si todos loc condicionales evaluan a falso.\n",
+    "La estructura __if__ permite ejecutar una sección de código solo si la condición que le sigue es cierta.\n",
+    "Opcionalmente puede ir seguida de cero o más __elif__ que serán ejecutados si los condicionales anteriores fueren negativos. Finalmente disponemos del statement __else__ que será ejecutado si todos loc condicionales evalúan a falso.\n",
     "\n",
-    "Un _if_ con todos estos elementos tiene la forma siguiente:\n",
+    "Un _if_ con todos estos elementos tiene la siguiente forma:\n",
     "\n",
     "``` py\n",
     "if conditionA:\n",
@@ -36,7 +36,7 @@
     "    defaultStatement\n",
     "```\n",
     "\n",
-    "A diferència de otros lenguajes python no dispone de _switch_ o _case_, pero se pueden simular con un conjunto de __elif__.\n",
+    "A diferencia de otros lenguajes Python no dispone de _switch_ o _case_, pero se pueden simular con un conjunto de _elif_.\n",
     "\n",
     "\n",
     "\n"
@@ -44,15 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduzca un número entero: 2\n",
-      "Más de uno\n"
+      "Introduzca un número entero: 1\n",
+      "Uno\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "\n",
     "if x < 0:\n",
     "    x = 0\n",
-    "    print('Negativo cambiado a zero')\n",
+    "    print('Negativo cambiado a cero')\n",
     "elif x == 0:\n",
     "    print('Zero')\n",
     "elif x == 1:\n",
@@ -74,9 +74,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# for\n",
+    "# _while_\n",
     "\n",
-    "El elemento __for__ en Python sirve para iterar sobre una sequencia (lista, String) o algún elemento generador (más sobre esté tema en el futuro).\n",
+    "Esta _sentencia compuesta_ ejecuta el còdigo en su interior mientras la condición en su cabecera sea cierta.\n",
+    "\n",
+    "En su forma común la estructura es:\n",
+    "```py\n",
+    "while condition:\n",
+    "    statements\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# _for_\n",
+    "\n",
+    "El elemento __for__ en Python sirve para iterar sobre una secuencia (lista, String) o algún elemento generador (más sobre este tema en el futuro).\n",
+    "Fijaros que este comportamiento, aunque presente puntualmente en otros lenguajes, difiere bastante de lo que entenderíamos por _for_ en _C_ o _Java_.\n",
     "\n",
     "La esructura que sigue és:\n",
     "```py\n",
@@ -84,6 +100,33 @@
     "    statements\n",
     "```\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# FIBonacci series:\n",
+    "# the sum of two elements defines the next\n",
+    "a, b = 0, 1\n",
+    "while b < 10:\n",
+    "    print(b)\n",
+    "    a, b = b, a+b"
    ]
   },
   {
@@ -114,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El elemento sobre el que se itera se selecióna en cada iteración, eso puede llevar a un fncionamiento inesperado:"
+    "El elemento sobre el que se itera se selecciona en cada iteración, eso puede llevar a un funcionamiento inesperado:"
    ]
   },
   {
@@ -148,17 +191,17 @@
    "source": [
     "## range()\n",
     "\n",
-    "Para iterar sobre una sequencia de numeros podemos utilizar la fución del lenguaje __reange()__\n",
+    "Para iterar sobre una secuencia de números podemos utilizar la función del lenguaje __range()__\n",
     "\n",
-    "Esta función puede tener entre 1 i 3 paràmetros:\n",
+    "Esta función puede tener entre 1 y 3 parámetros:\n",
     "- `range(a)` -> Genera la secuencia \\[0.._a_) incrementando en una unidad\n",
-    "- `range(a, b)` -> Genera la sequencia \\[_a_.._b_) incrementando en una unidad\n",
-    "- `range(a, b, c)` -> Genera la sequencia \\[_a_.._b_) incrementando _c_ unidades en cada iteración"
+    "- `range(a, b)` -> Genera la secuencia \\[_a_.._b_) incrementando en una unidad\n",
+    "- `range(a, b, c)` -> Genera la secuencia \\[_a_.._b_) incrementando _c_ unidades en cada iteración"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -179,11 +222,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# _break_, _continue_ y _else_ en bucles\n",
+    "\n",
+    "Como en otros lenguajes _Python_ nos ofrece la posibilidad de forzar la salida de un bucle con __break__ o la de saltar a la siguiente iteración utilizando __continue__. Lo que no resulta tan común es el uso del statement __else__ en los bucles, que únicamente es ejecutado si se ha salido del bucle de forma normal (no ha sido a causa de un _break_)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is a prime number\n",
+      "3 is a prime number\n",
+      "4 equals 2 * 2\n",
+      "5 is a prime number\n",
+      "6 equals 2 * 3\n",
+      "7 is a prime number\n",
+      "8 equals 2 * 4\n",
+      "9 equals 3 * 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(2, 10):\n",
+    "    for x in range(2, n):\n",
+    "        if n % x == 0:\n",
+    "            print(n, 'equals', x, '*', n//x)\n",
+    "            break\n",
+    "    else:\n",
+    "        # loop fell through without finding a factor\n",
+    "        print(n, 'is a prime number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found an even number 2\n",
+      "Found a number 3\n",
+      "Found an even number 4\n",
+      "Found a number 5\n",
+      "Found an even number 6\n",
+      "Found a number 7\n",
+      "Found an even number 8\n",
+      "Found a number 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for num in range(2, 10):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"Found an even number\", num)\n",
+    "        continue\n",
+    "    print(\"Found a number\", num)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## _pass_\n",
+    "\n",
+    "Hay algunas sentencias que por sintaxis requieren algo después de ellas como es el caso de las declaraciones de funciones o los bucles. Además, puesto que el lenguaje utiliza identación en lugar de corchetes para separar los bloques resulta imposible declarar un bloque vacío. Por ello existe el elemento __pass__, que no hace absolutamente nada.\n",
+    "\n",
+    "```py\n",
+    "while True:\n",
+    "    pass  # Busy-wait for keyboard interrupt (Ctrl+C)\n",
+    "\n",
+    "class MyEmptyClass:\n",
+    "    pass\n",
+    "\n",
+    "def initlog(*args):\n",
+    "    pass   # Remember to implement this!\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Enlaces\n",
+    "\n",
+    "* [Python tutorial - More Control Flow Tools \\[en\\]](https://docs.python.org/3/tutorial/controlflow.html)\n",
+    "* [Python language reference - Compound statements \\[en\\]](https://docs.python.org/3/tutorial/controlflow.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HI"
+   ]
   }
  ],
  "metadata": {
