--- a/teoria/4_control_flow.ipynb
+++ b/teoria/4_control_flow.ipynb
@@ -316,15 +316,23 @@
     "# Enlaces\n",
     "\n",
     "* [Python tutorial - More Control Flow Tools \\[en\\]](https://docs.python.org/3/tutorial/controlflow.html)\n",
-    "* [Python language reference - Compound statements \\[en\\]](https://docs.python.org/3/tutorial/controlflow.html)"
+    "* [Python language reference - Compound statements \\[en\\]](https://docs.python.org/3/tutorial/controlflow.html)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "HI"
+    "<span style=\"float: left\">  [<- ?](./5_functions.ipynb) </span>\n",
+    "<span style=\"float: right\"> [5_functions ->](./5_functions.ipynb) </span>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
