--- a/teoria/5_functions.ipynb
+++ b/teoria/5_functions.ipynb
@@ -529,6 +529,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [<- Previous - 4_control_flow](./4_control_flow.ipynb)\n",
+    "- [-> Next -?](./5_functions.ipynb)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
