--- a/teoria/4_control_flow.ipynb
+++ b/teoria/4_control_flow.ipynb
@@ -44,15 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduzca un número entero: 1\n",
-      "Uno\n"
+      "Introduzca un número entero: 2\n",
+      "Más de uno\n"
      ]
     }
    ],
@@ -86,25 +86,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# _for_\n",
-    "\n",
-    "El elemento __for__ en Python sirve para iterar sobre una secuencia (lista, String) o algún elemento generador (más sobre este tema en el futuro).\n",
-    "Fijaros que este comportamiento, aunque presente puntualmente en otros lenguajes, difiere bastante de lo que entenderíamos por _for_ en _C_ o _Java_.\n",
-    "\n",
-    "La esructura que sigue és:\n",
-    "```py\n",
-    "for var_name in sequence_name:\n",
-    "    statements\n",
-    "```\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +113,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# _for_\n",
+    "\n",
+    "El elemento __for__ en Python sirve para iterar sobre una secuencia (lista, String) o algún elemento generador (más sobre este tema en el futuro).\n",
+    "Fijaros que este comportamiento, aunque presente puntualmente en otros lenguajes, difiere bastante de lo que entenderíamos por _for_ en _C_ o _Java_.\n",
+    "\n",
+    "La esructura que sigue és:\n",
+    "```py\n",
+    "for var_name in sequence_name:\n",
+    "    statements\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "code_folding": []
    },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +171,14 @@
        "['defenestrate', 'cat', 'window', 'defenestrate']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "words = ['cat', 'window', 'defenestrate']\n",
-    "for w in words: # Prueba a iterar sobre un segmento de la lista entera:  words[:]\n",
+    "for w in words[:]: # Prueba a iterar sobre un segmento de la lista entera:  words[:]\n",
     "    if len(w) > 6:\n",
     "        words.insert(0, w)\n",
     "    \n",
