--- a/teoria/1_basics.ipynb
+++ b/teoria/1_basics.ipynb
@@ -20,7 +20,7 @@
     "var_name = literal\n",
     "```\n",
     "\n",
-    "Veamos un ejemplo senzillo:"
+    "Veamos un ejemplo sencillo:"
    ]
   },
   {
@@ -64,9 +64,9 @@
    "source": [
     "# Numeros\n",
     "\n",
-    "Como en todos los lenguajes contamos con los operadores matemàticos bàsicos:\n",
+    "Como en todos los lenguajes contamos con los operadores matemáticos básicos:\n",
     "- `+` (suma)\n",
-    "- `-` (resta o operador unario de cambio de signo)\n",
+    "- `-` (resta u operador unario de cambio de signo)\n",
     "- `*` (multiplicación)\n",
     "- `**` (exponenciación)\n",
     "- `/` (división con decimales)\n",
@@ -74,8 +74,8 @@
     "- `%` (módulo, resto división entera).\n",
     "\n",
     "La división normal siempre retorna un float.\n",
-    "Podemos utilizar tantos los parentesis que necessitemos.\n",
-    "Estas operaciones genera _int_ o _float_, aunque el lenjuage soporta otros tipos como _Decimal_, _Fraction_ o _numeros complejos_.\n",
+    "Podemos utilizar tantos los paréntesis que necesitemos.\n",
+    "Estas operaciones genera _int_ o _float_, aunque el lenguaje soporta otros tipos como _Decimal_, _Fraction_ o números complejos_.\n",
     "\n",
     "Veamos algún caso concreto:"
    ]
@@ -111,14 +111,14 @@
    "source": [
     "# Strings\n",
     "\n",
-    "Los literales de tipo String se pueden definir tanto con comillas simples como dobles. En qualquiera de los casos el caracter de escape el la barra invertida `\\`.\n",
+    "Los literales de tipo String se pueden definir tanto con comillas simples como dobles. En cualquiera de los casos el carácter de escape el la barra invertida `\\`. En Python3 la codificación por defecto es UTF-8\n",
     "\n",
     "Veamos ejemplos varios:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,8 +146,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si tenemos un literal con muchos caracteres que requieren scape podemos añadir una ___r___ antes del literal.\n",
+    "También contamos con una construcción de String que al utilizar tres comillas en lugar de una, nos permite definir strings multilinea:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\some\n",
+      "ame\n",
+      "C:\\some\\name\n",
+      "__________\n",
+      "< LinuxUPC >\n",
+      " ----------\n",
+      "        \\   ^__^\n",
+      "         \\  (oo)\\_______\n",
+      "            (__)\\       )\\/             U  ||----w |\n",
+      "                ||     ||\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Please, use Linux:\n",
+    "print('C:\\some\\name')  # here \\n means newline!\n",
+    "print(r'C:\\some\\name')  # note the r before the quote\n",
+    "s = \"\"\"\\\n",
+    "__________\n",
+    "< LinuxUPC >\n",
+    " ----------\n",
+    "        \\   ^__^\n",
+    "         \\  (oo)\\_______\n",
+    "            (__)\\       )\\/\\\n",
+    "             U  ||----w |\n",
+    "                ||     ||\n",
+    "\"\"\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "También podemos sumar (concatenar) Strings y multiplicarlos (repetirlos) con los signos aritméticos habituales.\n",
+    "Si lo que tenemos en manos son únicamente literales (no variables) podemos concatenarlos sin ningún símbolo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinuxUPCIEEE\n",
+      "########## Title ##########\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"LinuxUPC\"\n",
+    "      \"IEEE\")\n",
+    "\n",
+    "header = (' ' \"Title\"\n",
+    "          ' ')  # Si queremos concatenar literales en múltiples lineas los tenemos que poner entre paréntesis\n",
+    "# print(header \"Basics\")  # Esto lanzará un error\n",
+    "print(\"#\"*10 + header + \"#\"*10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indices\n",
+    "\n",
+    "Al final podemos ver los Strings como un vector de caracteres (pese a que no es como funcionan en Python).\n",
+    "Como los string on más fáciles de manipular explicaremos su funcionamiento asi como la característica de slides (subsegmentos).\n",
+    "\n",
+    "Como en la mayoría de lenguajes el primer elemento se identifica con el número _0_, el segundo con el _1_ y sucesivamente. Ademá el último elemento puede ser accedido con el índice _-1_, el penúltimo con _-2_ y sucesivamente.\n",
+    "Para acceder a un elemento concreto utilizamos a construcción `variable[index]`.\n",
+    "\n",
+    "En Python los Strings son inmutables, una vez creados o pueden ser modificados. Por ello aunque un statement de tipo `py[0]= \"p\"` sería válido en un vector, aplicado sobre un String generará un error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "py = \"Python\"\n",
+    "i = ---1\n",
+    "print(py[0])\n",
+    "print(py[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos extraer segmentos de un string utilizando `variable[a:b]` dónde _a_ y _b_ representa el segmento \\[a, b). Si omitimos _a_ se asume _0_ y si lo que omitimos es _b_ se asume _-1_. Si nos pasamos de indices no se genera ningún error, si no que se obtiene el indice correcto más cercano, en algunos casos resultando en un string vacío.\n",
+    "\n",
+    "Finalmente podemos obtener la longitud con `len(variable)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +284,10 @@
       " +---+---+---+---+---+---+\n",
       " 0   1   2   3   4   5   6\n",
       "-6  -5  -4  -3  -2  -1\n",
-      "\n"
+      "\n",
+      "Py\n",
+      "tho\n",
+      "Python\n"
      ]
     }
    ],
@@ -171,14 +299,25 @@
     " 0   1   2   3   4   5   6\n",
     "-6  -5  -4  -3  -2  -1\n",
     "\"\"\"\n",
-    "print(indexs)"
+    "py = \"Python\"\n",
+    "print(indexs)\n",
+    "\n",
+    "print(py[:2])\n",
+    "print(py[-4:-1])\n",
+    "print(py[-20:20])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Enlaces\n",
+    "* [Python tutorial - An informal Introduction \\[en\\]](https://docs.python.org/3/tutorial/introduction.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -199,6 +338,45 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
