--- a/teoria/5_functions.ipynb
+++ b/teoria/5_functions.ipynb
@@ -72,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LinuxUPC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# String - inmutables\n",
     "text = \"LinuxUPC\"\n",
@@ -96,17 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['LinuxUPC', 'IEEE']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Listas - mutables (1)\n",
     "lista = [\"LinuxUPC\"]\n",
@@ -120,17 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['LinuxUPC']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Lista - mutables (2) - paso por puntero del objeto (no por la variable en si)\n",
     "lista = [\"LinuxUPC\"]\n",
@@ -164,29 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 - Do you want to delete your account?y\n",
-      "2 - Do you wanna delete your account?y\n",
-      "3 - Really, do you wanna delete your account?y\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def ask_ok(prompt, retries=2, reminder='Please try again!'):\n",
     "    while True:\n",
@@ -215,19 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1, 2]\n",
-      "[1, 2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def f(a, L=[]):\n",
     "    L.append(a)\n",
@@ -240,19 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[2]\n",
-      "[3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Alternativa usando None\n",
     "def f(a, L=None):\n",
@@ -277,40 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- This parrot wouldn't voom if you put 1000 volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's a stiff !\n",
-      "\n",
-      "-- This parrot wouldn't voom if you put 1000 volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's a stiff !\n",
-      "\n",
-      "-- This parrot wouldn't VOOOOOM if you put 1000000 volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's a stiff !\n",
-      "\n",
-      "-- This parrot wouldn't VOOOOOM if you put 1000000 volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's a stiff !\n",
-      "\n",
-      "-- This parrot wouldn't jump if you put a million volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's bereft of life !\n",
-      "\n",
-      "-- This parrot wouldn't voom if you put a thousand volts through it.\n",
-      "-- Lovely plumage, the Norwegian Blue\n",
-      "-- It's pushing up the daisies !\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parrot(voltage, state='a stiff', action='voom', type='Norwegian Blue'):\n",
     "    print(\"-- This parrot wouldn't\", action, end=' ')\n",
@@ -345,24 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- Do you have any Limburger ?\n",
-      "-- I'm sorry, we're all out of Limburger\n",
-      "It's very runny, sir.\n",
-      "It's really very, VERY runny, sir.\n",
-      "----------------------------------------\n",
-      "client : John Cleese\n",
-      "shopkeeper : Michael Palin\n",
-      "sketch : Cheese Shop Sketch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cheeseshop(kind, *arguments, **keywords):\n",
     "    print(\"-- Do you have any\", kind, \"?\")\n",
@@ -392,17 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def double_imput(base):\n",
     "    return base*2\n",
@@ -439,20 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(4, 'four'), (1, 'one'), (3, 'three'), (2, 'two')]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ejemplo en la ordenación de objetos compuestos\n",
     "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
@@ -475,18 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 4, 5]\n",
-      "[3, 4, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print( list(range(3, 6)) )            # normal call with separate arguments\n",
     "\n",
@@ -496,17 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- This parrot wouldn't voom if you put four million volts through it. E's bleedin' demised !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parrot(voltage, state='a stiff', action='voom'):\n",
     "    print(\"-- This parrot wouldn't\", action, end=' ')\n",
@@ -561,6 +415,45 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
+  },
+  "toc": {
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": "block",
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
